Fixed CMakeLists.txt for examples.

--- a/Examples/project_deserialize/CMakeLists.txt
+++ b/Examples/project_deserialize/CMakeLists.txt
@@ -1,3 +1,4 @@
 add_executable(project_deserialize EXCLUDE_FROM_ALL project_deserialize.cpp)
 add_dependencies(examples project_deserialize)
-target_link_libraries(project_deserialize Required_Project ${QT_LIBRARIES})
+target_link_libraries(project_deserialize Required_Project)
+qt5_use_modules(project_deserialize Core Widgets)
