--- a/Examples/project_serialize/CMakeLists.txt
+++ b/Examples/project_serialize/CMakeLists.txt
@@ -1,3 +1,4 @@
 add_executable(project_serialize EXCLUDE_FROM_ALL project_serialize.cpp)
 add_dependencies(examples project_serialize)
-target_link_libraries(project_serialize Required_Project ${QT_LIBRARIES})
+target_link_libraries(project_serialize Required_Project)
+qt5_use_modules(project_serialize Core Widgets)
