--- a/Examples/project_widget/CMakeLists.txt
+++ b/Examples/project_widget/CMakeLists.txt
@@ -1,3 +1,4 @@
 add_executable(project_widget WIN32 EXCLUDE_FROM_ALL project_widget.cpp)
 add_dependencies(examples project_widget)
-target_link_libraries(project_widget Required_Project ${QT_LIBRARIES})
+target_link_libraries(project_widget Required_Project)
+qt5_use_modules(project_widget Core Widgets)
