--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,6 +25,23 @@ find_package(Qt5Widgets REQUIRED)
 
 ################################################################################
 #
+# Compiler-specific options
+#
+################################################################################
+
+if(CMAKE_COMPILER_IS_GNUCXX)
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++0x")
+endif()
+
+if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+    if(APPLE)
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libc++")
+    endif()
+endif()
+
+################################################################################
+#
 # Build targets
 #
 ################################################################################
